--- a/dieukiensd.html
+++ b/dieukiensd.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Điều khoản sử dụng</title>
-    <link rel="stylesheet" href="CSS/dieukiensd.css">
+    <link rel="stylesheet" href="css/dieukiensd.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="vendor/fontawesome/css/all.css">
     <link rel="stylesheet" href="css/header.css">
