--- a/chinhsachbm.html
+++ b/chinhsachbm.html
@@ -25,7 +25,7 @@
             <div id="searchform" class="clearfix">
                 <!-- liên kết đăng ký/ login -->
                 <div class="item" id="register">
-                   <a href="#">đăng nhập / đăng ký</a>
+                   <a href="dangnhap.html">đăng nhập / đăng ký</a>
                 </div>
                 <!-- khung nhập nội dung tìm kiếm -->
                 <div class="item">
