--- a/tuyendung.html
+++ b/tuyendung.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tuyển dụng</title>
-    <link rel="stylesheet" href="css/tuyendung.css">
+    <link rel="stylesheet" href="CSS/tuyendung.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="vendor/fontawesome/css/all.css">
     <link rel="stylesheet" href="css/header.css">
@@ -25,7 +25,7 @@
             <div id="searchform" class="clearfix">
                 <!-- liên kết đăng ký/ login -->
                 <div class="item" id="register">
-                   <a href="#">đăng nhập / đăng ký</a>
+                   <a href="dangnhap.html">đăng nhập / đăng ký</a>
                 </div>
                 <!-- khung nhập nội dung tìm kiếm -->
                 <div class="item">
